# novelists_api_final_proj_fastapi

./: .gitignore  README.md  pyproject.toml
madrproject/: __init__.py  app.py
madrproject/accounts/: models.py  repository.py  routers.py  schemas.py
madrproject/auth/: routers.py
madrproject/books/: models.py  repository.py  routers.py  schemas.py
madrproject/config/: database.py  dependencies.py  security.py  settings.py
madrproject/novelists/: models.py  routers.py  schemas.py
migrations/: env.py
migrations/versions/: c82465b1458f_first.py
